--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .profile-image {
@@ -20,6 +24,8 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin: 12px;
+  flex: 0 0 auto;
 }
 
 .logo {
@@ -27,6 +33,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding: 4px 12px;
 }
 
 button {
@@ -41,8 +48,14 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  padding: 4px 12px;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+}
+
+.links-grow {
+  flex: 1 1 auto;
 }
